@@ -1,13 +1,11 @@
 package com.example.fcm.service;
-import com.example.fcm.dto.NotificationRequestDto;
-import com.example.fcm.dto.SubscriptionRequestDto;
+
+import com.example.fcm.model.domain.*;
 import com.google.auth.oauth2.GoogleCredentials;
 import com.google.firebase.FirebaseApp;
 import com.google.firebase.FirebaseOptions;
-import com.google.firebase.messaging.FirebaseMessaging;
-import com.google.firebase.messaging.FirebaseMessagingException;
-import com.google.firebase.messaging.Message;
-import com.google.firebase.messaging.Notification;
+import com.google.firebase.messaging.*;
+
 import org.springframework.beans.factory.annotation.Value;
 import org.springframework.core.io.ClassPathResource;
 import lombok.extern.slf4j.Slf4j;
@@ -15,7 +13,8 @@ import org.springframework.stereotype.Service;
 
 import javax.annotation.PostConstruct;
 import java.io.IOException;
-import java.util.Collections;
+import java.util.List;
+
 
 @Slf4j
 @Service
@@ -42,30 +41,30 @@ public class NotificationService {
         }
     }
 
-    public void subscribeToTopic(SubscriptionRequestDto subscriptionRequestDto) {
+    public void subscribeToTopic(SubscriptionRequest subscriptionRequest) {
         try {
-            FirebaseMessaging.getInstance(firebaseApp).subscribeToTopic(Collections.singletonList(subscriptionRequestDto.getTokens()),
-                    subscriptionRequestDto.getTopicName());
+            FirebaseMessaging.getInstance(firebaseApp).subscribeToTopic(List.of(subscriptionRequest.getFcmToken()),
+                    subscriptionRequest.getTopicName());
         } catch (FirebaseMessagingException e) {
             log.error("Firebase subscribe to topic fail", e);
         }
     }
 
-    public void unsubscribeFromTopic(SubscriptionRequestDto subscriptionRequestDto) {
+    public void unsubscribeFromTopic(SubscriptionRequest subscriptionRequest) {
         try {
-            FirebaseMessaging.getInstance(firebaseApp).unsubscribeFromTopic(Collections.singletonList(subscriptionRequestDto.getTokens()),
-                    subscriptionRequestDto.getTopicName());
+            FirebaseMessaging.getInstance(firebaseApp).unsubscribeFromTopic(List.of(subscriptionRequest.getFcmToken()),
+                    subscriptionRequest.getTopicName());
         } catch (FirebaseMessagingException e) {
             log.error("Firebase unsubscribe from topic fail", e);
         }
     }
 
-    public String sendPnsToDevice(NotificationRequestDto notificationRequestDto) {
+    public String sendPnsToDevice(NotificationRequest notificationRequest) {
         Message message = Message.builder()
-                .setToken(notificationRequestDto.getTarget())
-                .setNotification(new Notification(notificationRequestDto.getTitle(), notificationRequestDto.getBody()))
-                .putData("content", notificationRequestDto.getTitle())
-                .putData("body", notificationRequestDto.getBody())
+                .setToken(notificationRequest.getTarget())
+                .setNotification(new Notification(notificationRequest.getTitle(), notificationRequest.getBody()))
+                .putData("content", notificationRequest.getTitle())
+                .putData("body", notificationRequest.getBody())
                 .build();
 
         String response = null;
@@ -78,12 +77,12 @@ public class NotificationService {
         return response;
     }
 
-    public String sendPnsToTopic(NotificationRequestDto notificationRequestDto) {
+    public String sendPnsToTopic(NotificationRequest notificationRequest) {
         Message message = Message.builder()
-                .setTopic(notificationRequestDto.getTarget())
-                .setNotification(new Notification(notificationRequestDto.getTitle(), notificationRequestDto.getBody()))
-                .putData("content", notificationRequestDto.getTitle())
-                .putData("body", notificationRequestDto.getBody())
+                .setTopic(notificationRequest.getTarget())
+                .setNotification(new Notification(notificationRequest.getTitle(), notificationRequest.getBody()))
+                .putData("content", notificationRequest.getTitle())
+                .putData("body", notificationRequest.getBody())
                 .build();
 
         String response = null;
